--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -109,6 +109,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.31.0.13;
@@ -151,7 +152,6 @@ set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
 set_real_ip_from 162.247.74.206;
-set_real_ip_from 162.247.74.213;
 set_real_ip_from 162.247.74.216;
 set_real_ip_from 162.247.74.217;
 set_real_ip_from 162.247.74.27;
@@ -294,7 +294,6 @@ set_real_ip_from 185.195.71.8;
 set_real_ip_from 185.195.71.9;
 set_real_ip_from 185.207.107.130;
 set_real_ip_from 185.207.107.216;
-set_real_ip_from 185.216.68.128;
 set_real_ip_from 185.220.100.240;
 set_real_ip_from 185.220.100.241;
 set_real_ip_from 185.220.100.242;
@@ -497,7 +496,6 @@ set_real_ip_from 185.230.162.218;
 set_real_ip_from 185.230.162.34;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
-set_real_ip_from 185.239.71.160;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.196;
 set_real_ip_from 185.241.208.202;
@@ -803,6 +801,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -829,7 +828,6 @@ set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
-set_real_ip_from 206.237.98.52;
 set_real_ip_from 208.109.215.188;
 set_real_ip_from 208.109.36.224;
 set_real_ip_from 209.141.32.198;
@@ -878,26 +876,6 @@ set_real_ip_from 23.129.64.146;
 set_real_ip_from 23.129.64.147;
 set_real_ip_from 23.129.64.148;
 set_real_ip_from 23.129.64.149;
-set_real_ip_from 23.129.64.210;
-set_real_ip_from 23.129.64.211;
-set_real_ip_from 23.129.64.212;
-set_real_ip_from 23.129.64.213;
-set_real_ip_from 23.129.64.214;
-set_real_ip_from 23.129.64.215;
-set_real_ip_from 23.129.64.216;
-set_real_ip_from 23.129.64.217;
-set_real_ip_from 23.129.64.218;
-set_real_ip_from 23.129.64.219;
-set_real_ip_from 23.129.64.220;
-set_real_ip_from 23.129.64.221;
-set_real_ip_from 23.129.64.222;
-set_real_ip_from 23.129.64.223;
-set_real_ip_from 23.129.64.224;
-set_real_ip_from 23.129.64.225;
-set_real_ip_from 23.129.64.226;
-set_real_ip_from 23.129.64.227;
-set_real_ip_from 23.129.64.228;
-set_real_ip_from 23.129.64.229;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.152;
 set_real_ip_from 23.137.249.143;
@@ -946,7 +924,6 @@ set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8100:400::9;
-set_real_ip_from 2404:8000:1025:602:776:e0fb:62bd:b8a8;
 set_real_ip_from 2.57.122.179;
 set_real_ip_from 2.57.122.215;
 set_real_ip_from 2.57.122.246;
@@ -1099,26 +1076,6 @@ set_real_ip_from 2620:18c:0:192::146;
 set_real_ip_from 2620:18c:0:192::147;
 set_real_ip_from 2620:18c:0:192::148;
 set_real_ip_from 2620:18c:0:192::149;
-set_real_ip_from 2620:18c:0:192::210;
-set_real_ip_from 2620:18c:0:192::211;
-set_real_ip_from 2620:18c:0:192::212;
-set_real_ip_from 2620:18c:0:192::213;
-set_real_ip_from 2620:18c:0:192::214;
-set_real_ip_from 2620:18c:0:192::215;
-set_real_ip_from 2620:18c:0:192::216;
-set_real_ip_from 2620:18c:0:192::217;
-set_real_ip_from 2620:18c:0:192::218;
-set_real_ip_from 2620:18c:0:192::219;
-set_real_ip_from 2620:18c:0:192::220;
-set_real_ip_from 2620:18c:0:192::221;
-set_real_ip_from 2620:18c:0:192::222;
-set_real_ip_from 2620:18c:0:192::223;
-set_real_ip_from 2620:18c:0:192::224;
-set_real_ip_from 2620:18c:0:192::225;
-set_real_ip_from 2620:18c:0:192::226;
-set_real_ip_from 2620:18c:0:192::227;
-set_real_ip_from 2620:18c:0:192::228;
-set_real_ip_from 2620:18c:0:192::229;
 set_real_ip_from 2620:59:a000:9666:216:3eff:fe7d:dae8;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
@@ -1129,7 +1086,6 @@ set_real_ip_from 2a00:1169:11f:5200::;
 set_real_ip_from 2a00:1169:11f:d680::;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
-set_real_ip_from 2a00:1728:3f::c0cc:80;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
@@ -1549,7 +1505,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.212.207.100;
+set_real_ip_from 44.193.133.77;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.129.199.163;
