--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.25.232.142;
 allow 102.130.113.9;
 allow 102.130.127.117;
 allow 103.106.3.94;
@@ -6,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.193.179.233;
+allow 103.196.37.111;
 allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
@@ -37,6 +39,7 @@ allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
 allow 107.172.13.143;
+allow 107.172.31.146;
 allow 107.172.31.165;
 allow 107.174.138.172;
 allow 107.174.231.197;
@@ -106,7 +109,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
@@ -206,6 +208,7 @@ allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.236.247.122;
+allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
 allow 179.43.159.196;
@@ -219,6 +222,7 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -800,7 +804,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -845,7 +848,6 @@ allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.69.167.80;
 allow 212.73.134.204;
-allow 212.95.50.77;
 allow 213.136.84.104;
 allow 213.252.140.118;
 allow 213.95.149.22;
@@ -938,6 +940,7 @@ allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c07::f03c:94ff:fe12:513e;
 allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
+allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
 allow 2602:fc24:11:96f9::1;
@@ -1076,6 +1079,7 @@ allow 2620:18c:0:192::148;
 allow 2620:18c:0:192::149;
 allow 2620:59:a000:9666:216:3eff:fe7d:dae8;
 allow 2620:7:6001::120;
+allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
@@ -1606,7 +1610,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.151;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.101.79;
@@ -1640,7 +1643,6 @@ allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
 allow 54.224.79.94;
-allow 54.225.81.26;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
