--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,4 +1,3 @@
-set_real_ip_from 100.25.232.142;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.127.117;
 set_real_ip_from 103.106.3.94;
@@ -6,6 +5,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -109,6 +109,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.31.0.13;
@@ -555,6 +556,7 @@ set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 191.101.31.57;
 set_real_ip_from 191.252.92.147;
+set_real_ip_from 191.96.165.34;
 set_real_ip_from 192.210.255.181;
 set_real_ip_from 192.30.89.27;
 set_real_ip_from 192.42.116.13;
@@ -804,6 +806,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -848,10 +851,10 @@ set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
+set_real_ip_from 212.95.50.77;
 set_real_ip_from 213.136.84.104;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
-set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
@@ -1056,7 +1059,6 @@ set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
-set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::130;
 set_real_ip_from 2620:18c:0:192::131;
 set_real_ip_from 2620:18c:0:192::132;
@@ -1608,6 +1610,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.73.12;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.0.219.212;
 set_real_ip_from 5.255.100.151;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.101.10;
@@ -1764,7 +1767,6 @@ set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
-set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.205.129.119;
 set_real_ip_from 92.205.31.137;
 set_real_ip_from 92.243.24.163;
