--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -87,6 +87,7 @@ set_real_ip_from 107.189.8.133;
 set_real_ip_from 107.189.8.181;
 set_real_ip_from 107.189.8.226;
 set_real_ip_from 107.189.8.238;
+set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
@@ -146,11 +147,13 @@ set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 155.4.102.252;
 set_real_ip_from 160.119.249.240;
+set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
+set_real_ip_from 162.247.74.204;
 set_real_ip_from 162.247.74.206;
 set_real_ip_from 162.247.74.213;
 set_real_ip_from 162.247.74.216;
@@ -485,7 +488,6 @@ set_real_ip_from 185.220.101.99;
 set_real_ip_from 185.220.103.4;
 set_real_ip_from 185.220.103.5;
 set_real_ip_from 185.220.103.6;
-set_real_ip_from 185.220.103.7;
 set_real_ip_from 185.220.103.8;
 set_real_ip_from 185.220.103.9;
 set_real_ip_from 185.222.66.188;
@@ -615,6 +617,7 @@ set_real_ip_from 192.42.116.24;
 set_real_ip_from 192.42.116.25;
 set_real_ip_from 192.42.116.26;
 set_real_ip_from 192.42.116.27;
+set_real_ip_from 192.46.210.223;
 set_real_ip_from 192.46.227.185;
 set_real_ip_from 192.99.168.180;
 set_real_ip_from 193.105.134.150;
@@ -855,6 +858,7 @@ set_real_ip_from 212.95.50.77;
 set_real_ip_from 213.136.84.104;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
+set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
@@ -926,6 +930,7 @@ set_real_ip_from 23.184.48.224;
 set_real_ip_from 23.184.48.94;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
+set_real_ip_from 2400:8904::f03c:93ff:fe68:23b3;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2.57.122.179;
@@ -1059,6 +1064,7 @@ set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
+set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::130;
 set_real_ip_from 2620:18c:0:192::131;
 set_real_ip_from 2620:18c:0:192::132;
@@ -1086,7 +1092,6 @@ set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:1169:119:b120::;
 set_real_ip_from 2a00:1169:11f:5200::;
-set_real_ip_from 2a00:1169:11f:d680::;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:3f::c0cc:80;
@@ -1496,6 +1501,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 35.0.127.52;
+set_real_ip_from 35.171.39.70;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.120.188.156;
@@ -1610,9 +1616,9 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.73.12;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.0.219.212;
 set_real_ip_from 5.255.100.151;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.101.79;
@@ -1767,6 +1773,7 @@ set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
+set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.205.129.119;
 set_real_ip_from 92.205.31.137;
 set_real_ip_from 92.243.24.163;
@@ -1793,7 +1800,6 @@ set_real_ip_from 94.103.124.46;
 set_real_ip_from 94.103.124.90;
 set_real_ip_from 94.103.124.91;
 set_real_ip_from 94.103.124.98;
-set_real_ip_from 94.131.110.58;
 set_real_ip_from 94.131.111.196;
 set_real_ip_from 94.131.111.69;
 set_real_ip_from 94.131.111.73;
@@ -1827,4 +1833,5 @@ set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.211.7.148;
 set_real_ip_from 96.27.198.133;
+set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
