--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -110,6 +110,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
@@ -225,6 +226,7 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.204.73.218;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -622,6 +624,7 @@ allow 193.189.100.196;
 allow 193.189.100.197;
 allow 193.189.100.198;
 allow 193.189.100.199;
+allow 193.189.100.200;
 allow 193.189.100.201;
 allow 193.189.100.202;
 allow 193.189.100.204;
@@ -800,6 +803,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -807,6 +811,7 @@ allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 200.25.27.112;
 allow 201.137.12.46;
+allow 202.61.226.98;
 allow 202.69.76.36;
 allow 204.137.14.104;
 allow 204.137.14.105;
@@ -876,7 +881,6 @@ allow 23.129.64.149;
 allow 23.137.248.100;
 allow 23.137.248.152;
 allow 23.137.249.143;
-allow 23.137.249.150;
 allow 23.137.249.185;
 allow 23.137.249.240;
 allow 23.137.249.8;
@@ -915,7 +919,6 @@ allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8100:400::9;
-allow 2404:8000:1025:602:776:e0fb:62bd:b8a8;
 allow 2.57.122.179;
 allow 2.57.122.215;
 allow 2.57.122.246;
@@ -933,8 +936,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e6:0:6::;
-allow 2602:fbf6:11:27::3;
-allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
 allow 2602:fc24:11:96f9::1;
 allow 2602:fc24:11:aabe::1;
@@ -1124,7 +1125,9 @@ allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
+allow 2a03:4000:55:efb::1000;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
+allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
 allow 2a03:4000:6:4015:8841:50ff:fe0d:719c;
@@ -1436,6 +1439,7 @@ allow 2a0f:df00:0:255::196;
 allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
+allow 2a0f:df00:0:255::200;
 allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::204;
@@ -1466,11 +1470,11 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.224.196.101;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.120.188.156;
+allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.63;
@@ -1743,6 +1747,7 @@ allow 93.95.231.14;
 allow 93.99.104.128;
 allow 93.99.104.18;
 allow 93.99.104.194;
+allow 94.102.51.15;
 allow 94.103.124.101;
 allow 94.103.124.104;
 allow 94.103.124.107;
