--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -113,6 +113,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -120,14 +121,11 @@ deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8100:400::9;
-deny 2404:8000:1025:602:776:e0fb:62bd:b8a8;
 deny 2600:3c00:e000:4ee::2;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e6:0:6::;
-deny 2602:fbf6:11:27::3;
-deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:4441::1;
 deny 2602:fc24:11:96f9::1;
 deny 2602:fc24:11:aabe::1;
@@ -316,7 +314,9 @@ deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
 deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
+deny 2a03:4000:55:efb::1000;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
+deny 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 deny 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 deny 2a03:4000:62:8:c855:23ff:fef6:50ee;
 deny 2a03:4000:6:4015:8841:50ff:fe0d:719c;
@@ -628,6 +628,7 @@ deny 2a0f:df00:0:255::196;
 deny 2a0f:df00:0:255::197;
 deny 2a0f:df00:0:255::198;
 deny 2a0f:df00:0:255::199;
+deny 2a0f:df00:0:255::200;
 deny 2a0f:df00:0:255::201;
 deny 2a0f:df00:0:255::202;
 deny 2a0f:df00:0:255::204;
